# turbo-ml

./: .gitignore  README.md  algorithm_results.csv  model.pth  optuna.ipynb  parameters.csv  pyproject.toml  requirements.txt  requirements_simplified.txt  requirements_topological.txt  results.csv  run_workflow.sh  scores.csv  start_prefect.sh  topological_parameters.csv  turboML_experiment.py
.dvc/: config
.github/workflows/: python-package.yml  python-publish.yml
autoIRAD/: AutoIRAD.py  __init__.py  generate_autoIRAD_dataset.py
autoIRAD/images/: .gitignore  0_abalone_0.png.dvc  0_abalone_1.png.dvc  0_abalone_10.png.dvc  0_abalone_11.png.dvc  0_abalone_12.png.dvc  (+1046 more)
benchmark/: .gitignore  __init__.py  experiment_AutoIRAD.py  experiment_autogluon.py  experiment_evalml.py  experiment_h2o.py  experiment_pycaret.py  experiment_sklearn.py  experiment_tpot.py  friedman_test.py  turboML_experiment.py  utils.py  utils_old.py
data/: .gitignore  best_family.csv  best_family.csv.dvc  family_rma.csv.dvc  family_scores.csv  family_scores.csv.dvc  organize_scores_into_famillies.ipynb  parameters.csv  parameters.csv.dvc  results.csv.dvc  scores.csv  scores.csv.dvc
datasets/: .gitignore  AutoIRAD-dataset-distances-ohe.csv.dvc  AutoIRAD-dataset-distances.csv.dvc  __init__.py  clustering.ipynb  dataset_distance.py  load.py  missing_datasets.csv.dvc  openML.ipynb  openm_exctractor.py  otdd.py  read.ipynb  results.tsv.dvc  results_algorithms.csv.dvc  results_full.csv.dvc  tests.py
quick_ai/: __init__.py  __main__.py  quickai.py
tests/: test_experimental_turboml.py  test_imports.py  test_quickai.py  test_turboml.py
turbo_ml/: __init__.py  turbo_ml_experimental.py  turboml.py
(+308 files in other folders)
