[tool.poetry]
name = "quick-ai"
version = "0.1.0"
description = ""
# TODO write a description
authors = ["Dawid Siera <dawid.siera@gmail.com>", "Anatol Kaczmarek <mail@mail.com>"]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]
pytest = "^6.2.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"