[tool.poetry]
name = "turbo-ml"
version = "0.1.2"
description = "Auto ML library for automated model selection using pre-trained neural networks"
readme = "README.md"
authors = ["Dawid Siera <dawid.siera@gmail.com>", "Anatol Kaczmarek <anatol.kaczmarek@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]
pytest = "^6.2.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[project.scripts]
turbo_ml = "turbo_ml.__main__:main"