[tool.poetry]
name = "turbo-ml"
version = "0.1.3"
description = "Auto ML library for automated model selection using pre-trained neural networks"
readme = "README.md"
authors = ["Dawid Siera <dawid.siera@gmail.com>", "Anatol Kaczmarek <anatol.kaczmarek@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^2.0.0"
pandas = "^2.0.3"
scikit-learn = "^1.0.0"
optuna = "^2.9.1"
torch = "^2.0.0"
xgboost = "^2.0.0"
certifi = "^2021.5.30"
requests = "^2.26.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[project.scripts]
turbo_ml = "turbo_ml.__main__:main"